<resources>
    <string name="app_name">Calendar App</string>
    <string name="no_events">No events</string>
    <string name="week_index">%1$d week</string>

    <string name="event_list">My events</string>
    <string name="edit_event">Edit event</string>

    <string name="event_title">Title</string>
    <string name="event_who">Who</string>
    <string name="event_location">Location</string>
    <string name="event_description">Description</string>
    <string name="event_all_day">All-day</string>

    <string name="author_email">gsv28rus@gmail.com</string>

    <string name="action_settings">Settings</string>
    <string name="action_go_today">Today</string>
    <string name="action_accept">Accept</string>

    <string name="menu_list">List</string>
    <string name="menu_day">Day</string>
    <string name="menu_week">Week</string>
    <string name="menu_month">Month</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_login">Login</string>

    <string name="save">Save</string>

    <string name="repeat_not">Does not repeat</string>
    <string name="repeat_daily">Repeats daily</string>
    <string name="repeat_weekly">Repeats weekly</string>
    <string name="repeat_monthly">Repeats monthly</string>
    <string name="repeat_yearly">Repeats yearly</string>
</resources>
