<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_list"
                android:icon="@drawable/ic_list"
                android:title="@string/menu_list"/>
        <item
                android:id="@+id/nav_day"
                android:icon="@drawable/ic_day"
                android:title="@string/menu_day"/>
        <item
                android:id="@+id/nav_week"
                android:icon="@drawable/ic_week"
                android:title="@string/menu_week"/>
        <item
                android:id="@+id/nav_month"
                android:icon="@drawable/ic_month"
                android:title="@string/menu_month"/>
    </group>

    <group android:id="@+id/group_settings" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dashboard"
                android:icon="@drawable/ic_dashboard"
                android:title="@string/menu_dashboard"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback"/>
    </group>

    <group android:id="@+id/group_login" android:checkableBehavior="single">
        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:title="@string/menu_login"/>
    </group>

</menu>
